- Added support for reading the "X-KDE-Default-UserAgent-String" property from   KDE browsing engine components to ensure the correct user-agent string is used   and shown by default.

- Make sure the runtime and not compile time KDE version number is 
  used when constructing user-agent strings.

- Used QStringBuilder for minor performance improvement.

BUG:198428

svn path=/trunk/KDE/kdelibs/; revision=1180675